# blog

./: .gitignore  LICENSE.txt  README.md  manage.py  pyproject.toml
src/blog/: __about__.py  settings.py  urls.py
tests/: __init__.py
