[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog"
dynamic = ["version"]
description = "Charlie's blog site"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "charlie-pecora", email = "charlie.pecora@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "django"
]

[project.urls]
Documentation = "https://github.com/charlie-pecora/blog#readme"
Issues = "https://github.com/charlie-pecora/blog/issues"
Source = "https://github.com/charlie-pecora/blog"

[tool.hatch.version]
path = "src/blog/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/blog tests}"

[tool.coverage.run]
source_pkgs = ["blog", "tests"]
branch = true
parallel = true
omit = [
  "src/blog/__about__.py",
]

[tool.coverage.paths]
blog = ["src/blog", "*/blog/src/blog"]
tests = ["tests", "*/blog/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
